update .gitignore and deleted folder .vs GIN PGP SIGNATURE-----
 wsBcBAABCAAQBQJdKy3kCRBK7hj4Ov3rIwAAdHIIAJUsTBerA61Q4eZRZci2f+9a
 Q4Cwag7yUoDf/qg5BroSdASy0uhRVtk6h0IaOj+b2xAFWLCcN1FjQ97S66qZjBOg
 M4XMMdEp7LF6QXyAhe6nkFXEtUXRehXzdgOVChRepSqrknQQrGE+gPnsH0vWIQXH
 oJtcpH03i6zncwLyI9AP3lIhGMpbtIHeI5N3c7azdAZ57mzBK7RIXkVNbnur+bwF
 M8zeuSnwzTgHlZ1ERHui1m0DeCzcQg69osOZ4fMxpuq6bEEp6Nft/EyvfsCcEFKo
 SOs51IiIRdk2OgwhuK5nAhinLz5QMYb497785vkOJg9NNZ0k/CFmZKmLLF5or40=
 =rmT1
 -----END PGP SIGNATURE-----
 

Update README.mdие readme.mddme.mdSIGNATURE-----
 

Дополнение readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ x64/
 [Bb]in/
 [Oo]bj/
 
+# Visual Studio 2019 cache/options directory
+.vs/
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -129,7 +132,3 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
-
-EasyGraph/EasyGraph.vs/*
-
-
