Shows the value of a point on the chart when clicked P SIGNATURE-----
 wsBcBAABCAAQBQJdK5ogCRBK7hj4Ov3rIwAAdHIIAB2k/QCaW//3EdyTr9cacAF0
 A6a9o3WmBjySl3DFlgNECTzBWV8106pyLLVfON4nrdejS/+t9GKn2WwItUgWxccX
 kfXlw8pzuOlDN/4IlDsRHui+pEJujTwGDWUVi/wm03NrCI9gr2a5FsgU4pKF7yEp
 WY30amDIr2pwn+FYHT2iN4FQzsfd1eHKF0+GrpaqL5nUm7YN6WXo8ISlMz8vnobT
 m4BvooQ+3BiYOk4Sem5NovbsjkXzhVcNRp+1e4smWf4OkzIqMF+ciGCvulLsw+hM
 kwUE5ncQy2r3ez/+XoXZAxpTmj5lswqamik4ognaL5eljF6X9k4sw2cNiKK6/TE=
 =nw2c
 -----END PGP SIGNATURE-----
 

Update README.mdие readme.mdURE-----
 

Update README.mdие readme.mddme.mdSIGNATURE-----
 

Дополнение readme.md

--- a/EasyGraph/EasyGraph/EasyGraph.csproj
+++ b/EasyGraph/EasyGraph/EasyGraph.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
@@ -56,6 +56,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Languages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
