--- a/EasyGraph/EasyGraph/EasyGraph.csproj
+++ b/EasyGraph/EasyGraph/EasyGraph.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logic\ChartExtensions.cs" />
+    <Compile Include="Logic\CheckingXY.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -57,7 +59,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Languages.cs" />
-    <Compile Include="Logic.cs" />
+    <Compile Include="Logic\MainLogic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
